--- a/index.html
+++ b/index.html
@@ -2,38 +2,48 @@
 <html>
 <head>
 	<title>Get a WOD</title>
+	<link href="https://fonts.googleapis.com/css?family=Carter+One&display=swap" 
+	rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
+	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
+	crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="style1.css">
 </head>
 <body>
 	<h1>Create Your Own WOD</h1>
-	<h2>World's simplest way to design your own workout sesh</h2>
+	<h2>Simplest way to design a workout session</h2>
 	<form method="GET" action="workout.html">
-		<div>
-		What do you want to work out today? <br>
-			<select name="area:">
-				<option value="full" >Full Body</option>
-				<option value="upper">Upper Body</option>
-				<option value="core">Core</option>
-				<option value="lower">Lower Body</option>
-			</select><br>
-		</div>
-		<div>
-			How much time do you have? <br>
-			<select name="time:">
-				<option value="30" >30 minutes</option>
-				<option value="60">60 minutes</option>
-				<option value="90">90 minutes</option>
-				<option value="120">120 minutes</option>
-			</select><br>
-		</div>
-		<div>
-			What type of workout do you want? <br>
-			<select name="type:">
-				<option value="strength" >Strength/Free Weights</option>
-				<option value="calisthenic">Calisthenic/Body Weight</option>
-				<option value="aerobic">Aerobic/Cardio</option>
-			</select><br>
-		</div>
+		<div id="questions">
+			<div>
+				<img src="images/bicep.svg" height=130px><br><br>
+				What do you want to work out today? <br>
+				<select name="area:">
+					<option value="full" >Full Body</option>
+					<option value="upper">Upper Body</option>
+					<option value="core">Core</option>
+					<option value="lower">Lower Body</option>
+				</select><br>
+			</div>
+			<div>
+				<br><img src="images/clock.png" height=100px><br><br>
+				How much time do you have? <br>
+				<select name="time:">
+					<option value="30" >30 minutes</option>
+					<option value="60">60 minutes</option>
+					<option value="90">90 minutes</option>
+					<option value="120">120 minutes</option>
+				</select><br>
+			</div>
+			<div>
+				<br><img src="images/dumbbell.png" height=100px><br><br>
+				What type of workout do you want? <br>
+				<select name="type:">
+					<option value="strength" >Strength/Free Weights</option>
+					<option value="calisthenic">Calisthenic/Body Weight</option>
+					<option value="aerobic">Aerobic/Cardio</option>
+				</select><br>
+			</div>
+		</div>	
 		<div>
 			<input type="submit" value="Get Workout!!!">
 			<input type="reset">
