--- a/workout.html
+++ b/workout.html
@@ -2,7 +2,13 @@
 <html>
 <head>
 	<title></title>
+   <link href="https://fonts.googleapis.com/css?family=Carter+One&display=swap" 
+   rel="stylesheet">
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
+   integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
+   crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="style2.css">
+   <script defer />type="text/javascript" src="script.js"></script>
 </head>
 <body>
 	<h1>Start Training</h1>
